--- a/components/ui/Button.module.css
+++ b/components/ui/Button.module.css
@@ -9,6 +9,7 @@
   padding: 0.5rem 1.5rem;
   text-align: center;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
+  display: inline-block;
 }
 
 .btn:hover,
